--- a/index.html
+++ b/index.html
@@ -6,30 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <script src="./script.js" defer></script>
-    <link rel="stylesheet" href="./style.css"
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div id="header"><h1></h1></div>
     <div class="container">
-        <div class="display">
+        <div class= "display">
         </div>
         <button class="reset">Reset</button>
-        <button class="7">7</button>
-        <button class="8">8</button>
-        <button class="9">9</button>
-        <button class="/">/</button>
-        <button class="4">4</button>
-        <button class="5">5</button>
-        <button class="6">6</button>
-        <button class="*">*</button>
-        <button class="1">1</button>
-        <button class="2">2</button>
-        <button class="3">3</button>
-        <button class="-">-</button>
-        <button class="0">0</button>
-        <button class=".">.</button>
-        <button class="=">=</button>
-        <button class ="+">+</button>
+        <button class="backspace">Backspace</button>
+        <button id="num" class="7">7</button>
+        <button id="num" class="8">8</button>
+        <button id="num" class="9">9</button>
+        <button id="operator" class="divide">/</button>
+        <button id="num" class="4">4</button>
+        <button id="num" class="5">5</button>
+        <button id="num" class="6">6</button>
+        <button id="operator" class="multiply">*</button>
+        <button id="num" class="1">1</button>
+        <button id="num" class="2">2</button>
+        <button id="num" class="3">3</button>
+        <button id="operator" class="minus">-</button>
+        <button id="num" class="zero">0</button>
+        <button class="dot">.</button>
+        <button id="" class="equal">=</button>
+        <button id="operator" class ="plus">+</button>
     </div>
     <div id="footer"></div>
 </body>
